# angular-fastapi-traefik

./: README.md  compose.yml  package-lock.json  package.json
angular/: angular.json  package-lock.json  package.json  tsconfig.app.json
angular-material/: angular.json  eslint.config.js  package-lock.json  package.json
angular-material/src/app/: app.component.ts  app.config.ts  app.routes.ts  material.module.ts
angular-material/src/app/core/guards/: is-logged-in.guard.ts
angular-material/src/app/core/interceptors/: auth.interceptor.ts
angular-material/src/app/core/models/: Address.ts  User.ts
angular-material/src/app/core/services/: AuthService.ts
angular-material/src/app/layouts/blank/: blank.component.ts
angular-material/src/app/services/: core.service.ts
angular-material/src/environments/: environment.development.ts  environment.ts
angular/.docker/: Dockerfile  prod.Dockerfile
angular/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
angular/src/app/core/interceptors/: auth.interceptor.ts
angular/src/environments/: environment.development.ts  environment.ts
backend/fastapi-auth/: Dockerfile  Dockerfile copy  README.md  compose.yml  pyproject.toml  pyproject.toml.old  ruff.toml
backend/fastapi-auth/app/: main.py
backend/fastapi-auth/app/api/: __init__.py
backend/fastapi-auth/app/api/endpoints/: auth.py  health.py  home.py  user.py
backend/fastapi-auth/app/core/: config.py  exception_handlers.py  security.py
backend/fastapi-auth/app/services/: auth_service.py
(+18 files in other folders)
