[project]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Aurelien Nkumbe ",email = "nkaurelien@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (==0.99.1)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "fastapi-jwt-auth (==0.5.0)",
    "pydantic (==1.10.16)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
httpx = "^0.28.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
